// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@connection should run a query with the @connection directive and write the result to the store key defined in the directive 1`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "books:abc": [
      {
        "__typename": "Book",
        "name": "abcd",
      },
    ],
  },
}
`;

exports[`@connection should run a query with the connection directive and filter arguments and write the result to the correct store key 1`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "books:abc({"order":"popularity"})": [
      {
        "__typename": "Book",
        "name": "abcd",
      },
    ],
  },
}
`;

exports[`@connection should support cache field policies that filter key arguments 1`] = `
{
  "ROOT_QUERY": {
    "__typename": "Query",
    "books:{"order":"popularity"}": [
      {
        "__typename": "Book",
        "name": "abcd",
      },
    ],
  },
}
`;

exports[`client should warn if server returns wrong data 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'description' while writing result {
  "id": "1",
  "name": "Todo 1",
  "price": 100,
  "__typename": "Todo"
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
